[package]
name = "asc"
description = "axo's source control"
version = "0.3.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
derive_more = { version = "2.0.1", features = ["full"] }
eyre = "0.6.12"
glob = "0.3.3"
hex = "0.4.3"
ignore = "0.4.25"
miniz_oxide = "0.8.9"
pathdiff = "0.2.3"
regex = "1.12.2"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10.6"
similar = "2.7.0"
threeway_merge = "0.1.10"
whoami = "1.6.1"
