[package]
name = "asc"
description = "axo's source control"
version = "0.6.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.10.0", features = ["serde"] }
blame-rs = "0.1.5"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
derive_more = { version = "2.0.1", features = ["full"] }
eyre = "0.6.12"
glob = "0.3.3"
hex = "0.4.3"
ignore = "0.4.25"
keyring = "3.6.3"
manyterm = { path = "manyterm" }
miniz_oxide = "0.8.9"
pathdiff = "0.2.3"
rand = "0.9.2"
regex = "1.12.2"
reqwest = "0.12.25"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
sha1 = "0.10.6"
similar = { version = "2.7.0", features = ["serde"] }
threeway_merge = "0.1.10"
unicode-width = "0.2.2"
webpki-roots = "1.0.4"
whoami = "1.6.1"
xdelta3 = { path = "xdelta3-rs" }
