[package]
name = "asc"
description = "axo's source control"
version = "0.6.0"
edition = "2024"

[dependencies]
blame-rs = "0.1.5"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
ignore = "0.4.25"
libasc = { path = "../libasc" }
manyterm = { git = "https://github.com/axololly/manyterm" }
sha1 = "0.10.6"
similar = "2.7.0"
threeway_merge = "0.1.10"
unicode-width = "0.2.2"
whoami = "1.6.1"
