[package]
name = "libasc"
description = "The core utilities behind asc"
version = "0.1.0"
edition = "2024"

[dependencies]
async-ssh2-tokio = "0.12.2"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
ecdsa = "0.16.9"
expand-tilde = "0.6.1"
eyre = "0.6.12"
glob = "0.3.3"
hex = "0.4.3"
ignore = "0.4.25"
miniz_oxide = "0.8.9"
p256 = { version = "0.13.2", features = ["serde"] }
pathdiff = "0.2.3"
rand = "0.8"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
sha2 = "0.10.9"
similar = "2.7.0"
tokio = { version = "1.49.0", features = ["io-std"] }
url-parse = "1.0.10"

[dependencies.xdelta3]
git = "https://github.com/axololly/xdelta3-rs"

[dependencies.rateless-tables]
git = "https://github.com/axololly/rateless-tables"
version = "0.3.1"
