[package]
name = "manyterm"
version = "0.1.0"
edition = "2024"

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2.175"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader"
]

[target.'cfg(windows)'.dependencies.windows-targets]
version = "0.53"